Inserindo link da plataforma da Hiper Place

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
   <!-- 🔲 Camada de vidro (linktree) -->
   <div class="relative z-10 w-[90%] max-w-sm p-6 rounded-2xl border border-white/20 backdrop-blur-xl bg-white/10 shadow-lg">
-    
+
     <!-- Logo + Nome -->
     <div class="flex flex-col items-center">
       <svg viewBox="0 0 400 400" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-20 mb-4">
@@ -33,7 +33,7 @@
       <h1 class="text-4xl font-extrabold tracking-widest text-transparent bg-clip-text bg-gradient-to-r from-[#cf5fff] via-[#b13fff] to-[#ff77ff] drop-shadow-[0_0_6px_#cf5fff]">
         HIKARUDEV
       </h1>
-      
+
     </div>
 
     <br>
@@ -45,7 +45,7 @@
       <a href="https://wa.me/5581984423591" target="_blank" class="flex items-center justify-center gap-3 border-2 rounded-xl py-3 text-lg transition text-[#00eaff] border-[#00eaff] hover:bg-[#00eaff] hover:text-black">
         <i class="fab fa-whatsapp"></i> WhatsApp
       </a>
-      <a href="#" target="_blank" class="flex items-center justify-center gap-3 border-2 rounded-xl py-3 text-lg transition text-[#cf5fff] border-[#cf5fff] hover:bg-[#cf5fff] hover:text-black">
+      <a href="https://jade-gray.vercel.app/" target="_blank" class="flex items-center justify-center gap-3 border-2 rounded-xl py-3 text-lg transition text-[#cf5fff] border-[#cf5fff] hover:bg-[#cf5fff] hover:text-black">
         <svg class="w-5 h-5" fill="#cf5fff" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <g filter="url(#glow-pink)">
             <path d="M1.293,11.293l4-4A1,1,0,1,1,6.707,8.707L3.414,12l3.293,3.293a1,1,0,1,1-1.414,1.414l-4-4A1,1,0,0,1,1.293,11.293Zm17.414-4a1,1,0,1,0-1.414,1.414L20.586,12l-3.293,3.293a1,1,0,1,0,1.414,1.414l4-4a1,1,0,0,0,0-1.414ZM13.039,4.726l-4,14a1,1,0,0,0,.686,1.236A1.053,1.053,0,0,0,10,20a1,1,0,0,0,.961-.726l4-14a1,1,0,1,0-1.922-.548Z"/>
@@ -56,7 +56,7 @@
             </filter>
           </defs>
         </svg>
-        Modelos
+        Serviços
       </a>
 
       <!-- Novo botão LinkedIn -->
